# logicrs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  INSTALL.md  README.md  build.rs  deny.toml  logicrs.gresource.xml  make-appimage.sh  make-dist.ps1  test.json
.github/workflows/: rust_ci.yml
content/: app.gresource.xml  circuit-panel.ui  circuit-view.ui  main-window.ui  module-list.ui
examples/: 1_4_demux.lrsproj  2_4_decoder.lrsproj  3_8_decoder.lrsproj  4-bit-adder.lrsproj  4-bit-counter.lrsproj  4_1_mux.lrsproj  4_2_encoder.lrsproj  4_2_priority_encoder.lrsproj  all-modules.lrsproj  junctions.lrsproj  lamps.lrsproj
snippets/: AppImageBuilder.yml  AppRun  com.spydr06.logicrs.desktop  installer.nsi  win-script.nsi
src/: config.rs  export.rs  fatal.rs  id.rs  main.rs  project.rs  selection.rs
src/application/: action.rs  actions.rs  clipboard.rs  data.rs  editor.rs  gactions.rs  info.rs  mod.rs  selection.rs  template.rs  user_settings.rs
src/modules/: builtin.rs  mod.rs
src/renderer/: cairo.rs  color.rs  mod.rs  prelude.rs  vector.rs
src/simulator/: block.rs  builtin.rs  connection.rs  decoration.rs  mod.rs  modules.rs  plot.rs  state.rs
src/ui/: circuit_panel.rs  circuit_view.rs  dialogs.rs  main_window.rs  mod.rs  module_list.rs  properties.rs  template.rs
style/: module-list.css  overlay.css  style.css
windows-dist/: .gitignore  LICENSE  README.md
windows-dist/lib/gdk-pixbuf-2.0/2.10.0/: loaders.cache
windows-dist/share/glib-2.0/schemas/: gschemas.compiled
windows-dist/share/icons/Adwaita/: icon-theme.cache
