[package]
name = "logicrs"
version = "0.0.1"
edition = "2021"
description = "An easy-to-use simulator for logical circuits"
readme = "./README.md"
# repository = "https://github.com/spydr06/logicrs"
license = "MIT"
authors = ["Spydr06 https://github.com/spydr06"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.adw]
package = "libadwaita"
version = "0.1.1"

[dependencies.adw]
package = "libadwaita"
version = "0.1.1"

[dependencies.gtk]
package = "gtk4"
version = "0.4.8"

[dependencies.glib]
package = "glib"
version = "0.15.12"

[dependencies.gl]
package = "glium"
version = "0.32.1"
default-features = false

[dependencies.epoxy]
package = "epoxy"
version = "0.1.0"

[dependencies.libloading]
package = "libloading"
version = "0.7.3"
