[package]
name = "logicrs"
version = "0.0.1"
edition = "2021"
description = "An easy-to-use simulator for logical circuits"
readme = "./README.md"
repository = "https://github.com/spydr06/logicrs"
license = "MIT"
authors = ["Spydr06"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
glib-build-tools = "0.16.3"

[dependencies.adw]
package = "libadwaita"
version = "0.2.1"
features = ["v1_2"]

[dependencies.gtk]
package = "gtk4"
version = "0.5.4"

[dependencies]
serde_json = "1.0"
serde = {version = "1.0.147", features = ["derive"]}
log = "0.4.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
